# cognify

./: .gitignore  README.md  pyproject.toml  requirements.txt
cognify/: __init__.py  __main__.py  _compat.py  _imports.py  _logging.py  _signal.py  _tracing.py  cognify_args.py  utils.py
cognify/frontends/dspy/: __init__.py  connector.py
cognify/frontends/langchain/: __init__.py  connector.py
cognify/graph/: base.py  modules.py  program.py  utils.py
cognify/graph/rewriter/: utils.py
cognify/hub/cogs/: __init__.py  common.py  decompose.py  ensemble.py  fewshot.py  model_selection.py  protection.py  reasoning.py  scaffolding.py  utils.py
cognify/hub/datasets/: hotpot.py
cognify/hub/evaluators/: code_humaneval.py  f1_score.py  llm_judge.py  match.py  utils.py
cognify/hub/metric/: __init__.py
cognify/hub/search/: codegen.py  datavis.py  default.py  qa.py  text_to_sql.py
cognify/llm/: README.md  __init__.py  litellm_wrapper.py  model.py  output.py  prompt.py  response.py
cognify/optimizer/: __init__.py  control_param.py  evaluator.py  plugin.py  progress_info.py  registry.py  utils.py
cognify/optimizer/analysis/: domain.py  param_sensitivity.py  preprocess.py  t2s.pkl  try.ipynb
cognify/optimizer/analyze/: try.ipynb
cognify/optimizer/bo/: tpe.py
cognify/optimizer/checkpoint/: ckpt.py  pbar_utils.py
cognify/optimizer/core/: .gitignore  common_stats.py  driver.py  driver_v1.py  flow.py  glob_config.py  opt_layer.py  sh.py  unified_layer_opt.py  upper_layer.py
cognify/optimizer/evaluation/: f1.py  llm_judge.py  metric.py
cognify/optimizer/trace/: checkpoint.py  (+1 more)
cognify/run/: evaluate.py  inspect.py  optimize.py  run.py  run_query.py
docs/: .gitignore  requirements.txt
docs/source/: conf.py  index.rst
examples/CHESS/: evaluator.py  ref.ipynb
examples/Codegen/: .gitignore  config.py  example.env  ref.ipynb  workflow.py
examples/HoVeR/: ref.ipynb
examples/HotPotQA/: config.py  ref.ipynb  workflow.py
examples/IR_matplot_agent/: .gitignore  analyze.ipynb  config.py  control_param.py  data_loader.py  evaluator.py  o1.py  opt_driver.py  ref.ipynb  workflow.py
examples/data-visualization/: .gitignore  config.py  opt_driver.py  ref.ipynb  workflow.py
examples/doc-retrieval/: _retrieve.py  config.py  example.env  ref.ipynb  workflow.py
examples/finrobot/: agent_profiles.json  config.py  dspy_agents.py  dspy_workflow.py  prepare_data.sh  prompts.py  ref.ipynb  trace_agents.py  trace_workflow.py  workflow.py
examples/math/: config.py  data._json  langgraph_workflow.py  ref.ipynb  workflow.py
examples/quickstart/: config.py  data._json  env.example  step.ipynb  workflow.py
examples/text-to-sql/: .gitignore  agg_result.py  cg_config_on_f1  cmp_result.py  config.py  debug.txt  f1_config_on_cg  gen_dev_for_train.py  postprocess.ipynb  ref.ipynb  requirements.txt  requirements_raw.txt  workflow.py
(+169 files in other folders)
