[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognify-ai"
version = "0.1.2"
description = "The Automated Optimizer for GenAI Workflows"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    {name = "Cognify Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.10"
dependencies = [
    "devtools",
    "datasets",
    "dspy-ai==2.5.32",
    "graphviz",
    "httpx==0.27.2",
    "langchain==0.3.4",
    "langchain-core==0.3.20",
    "langchain-openai==0.2.3",
    "litellm==1.51.0",
    "numpy",
    "openai==1.52.0",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
    "optuna==3.6.1",
    "optunahub==0.1.0b0",
    "datamodel-code-generator",
    "astunparse",
    "termcolor"
]

[project.urls]
Homepage = "https://github.com/GenseeAI/cognify"

[tool.setuptools.packages.find]
include = ["cognify*"]  # Include only the 'cognify' package

[project.scripts]
cognify = "cognify.__main__:main"  # Entry point for your CLI tool
